--- a/indexdb/src/style.css
+++ b/indexdb/src/style.css
@@ -1,5 +1,56 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+[type="checkbox"],
+button {
+  cursor: pointer;
+}
+button:disabled {
+  cursor: not-allowed;
+}
 
-.flex{
+.app-title {
+  text-align: center;
+  margin: 20px 0;
+}
+.add-todo-section {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.todos-list {
+  list-style: none;
+  padding: 10px;
+}
+
+.todo-item {
   display: flex;
-  gap: var(--gap);
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  gap: 10px;
+  border: 1px solid #ccc;
+  margin: 5px;
+}
+
+.todo-item:has([type="checkbox"]:checked) .todo-text {
+  text-decoration: line-through;
+}
+.todo-item:hover {
+  background-color: hsl(0, 0%, 95%);
+}
+
+.todo-label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.delete-todo-btn {
+  background-color: red;
+  color: white;
+  border-radius: 5px;
 }
